tests/parsing/smtlib/v2.7/errors/xxx_define_funs_res_mismatched_lists.smt2
(set-logic ALL)
(define-funs-rec
  ( (f () Bool) (g () Bool) )
  ( (and true false) )
)
